# virt-backup

./: ChangeLog  Makefile  Makefile.in  README  TODO  autobuild-official.sh  autobuild.sh  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  description  design.odt
SPEC/: virt-backup.spec
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  blockutils.c  sensors-amd.c  sensors-common.c  sensors-intel.c  sensors-pci.c  sensors.h  virt-backup  virt-backup-new.c  virt-backup.c  virt-backup.h
src/.deps/: virt_backup-blockutils.Po  virt_backup-sensors-amd.Po  virt_backup-sensors-common.Po  virt_backup-sensors-intel.Po  virt_backup-sensors-pci.Po  virt_backup-virt-backup.Po
